more fixes for spacing

--- a/style.css
+++ b/style.css
@@ -857,7 +857,7 @@ footer {
     }
 
     #about {
-        height: 130vh;
+        height: 145vh;
     }
 
     .tech-stack-item {
